# CRAFT-HLS

./: .env.example  .gitignore  .roomodes  README.md  pyproject.toml
.roo/commands/: hls-diagnose.md  hls-fill-contract.md  hls-lock-and-run.md  hls-review-contract.md  hls-start.md  hls-status.md  hls-write-contract.md
ccd_hls_agent/: __init__.py  agent_tui.py  budget.py  ccd.py  contracts.py  deterministic_repair.py  failure_analysis.py  hls_backends.py  json_utils.py  local_memory.py  model_clients.py  repair_actions.py  schemas.py  skills.py  task_contracts.py  task_modes.py  token_report.py  utils.py  workflow.py
ccd_hls_agent/hls_skills/: autodse_bottleneck.json  hls_array_partition.json  hls_data_file_runtime.json  hls_dataflow_fifo.json  hls_loop_pipeline_unroll.json  hls_signature_repair.json  hls_static_bounds.json  llm4hls_directive_dse.json  prometheus_tiling_fusion.json  variable_loop_bounds.json
ccd_hls_agent/templates/: ccd_hls_gen_v2.md  hls_eval_zero_shot.md  hls_repair.md  output_code_repair.md
configs/: deepseek_v4_flash.json
docs/: CCD_HLS_V2_LOOP_机制与数据对比.md  FPT2026_HLS_Context_Agent_Design.md  FPT2026_TrackA_CCD_HLS_参赛规划.md
references/papers/: README.md
scripts/: hls_agent_tui.py  hls_tui.py  run_cosim_validation.py  run_hls_eval_agentic_deepseek.py  run_hls_eval_benchmark.py
tests/: test_agent_tui.py  test_ccd.py  test_generation_contract.py  test_hls_backends.py  test_local_knowledge.py  test_m1_m3.py  test_repair_loop.py  test_task_contracts.py
