[project]
name = "ccd-hls-agent"
version = "0.1.0"
description = "Observable CCD-HLS agent for HLS-Eval with local/cloud OpenAI-compatible model interfaces."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
hls-eval = [
    "hls-eval @ git+https://github.com/sharc-lab/hls-eval.git",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ccd_hls_agent*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
